[package]
name = "docker-build"
version = "0.1.0"
edition = "2021"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
description = "Build Dockerfile and script from Cargo.toml for a Rust workspace project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[profile.release]
lto = true
