[package]
name = "cargo-docker-build"
version = "0.1.4"
edition = "2021"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
description = "Build Dockerfile and script from Cargo.toml for a Rust workspace project"
repository = "https://github.com/ovidiu-ionescu/docker-build"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
clap = { version = "4", features = ["derive", "cargo"] }
indoc = "2"

[profile.release]
lto = true

